--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
     "esm/"
   ],
   "scripts": {
-    "test-debug": "node --inspect-brk=9228 ./node_modules/jest/bin/jest --runInBand",
-    "test": "jest --runInBand",
     "watch": "tsc -p ./tsconfig.json --watch",
     "build": "npm run clear && tsc -p config/tsconfig.prod.json && tsc -p config/tsconfig.esm.prod.json",
     "clear": "rimraf lib dist esm",
@@ -28,18 +26,20 @@
     "@babel/preset-typescript": "^7.13.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "babel-loader": "^8.2.2",
+    "babel-plugin-import": "^1.13.3",
     "chalk": "^4.1.0",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^8.1.0",
+    "copy-webpack-plugin": "^6",
     "cross-spawn": "^7.0.3",
     "css-loader": "^5.2.0",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.3.1",
+    "html-webpack-plugin": "^4",
     "less": "^4.1.1",
     "less-loader": "7",
     "portfinder": "^1.0.28",
     "raw-loader": "^4.0.2",
     "react-convention-router": "^0.2.2",
+    "react-refresh": "^0.9.0",
     "semver": "^7.3.5",
     "style-loader": "^2.0.0",
     "url-loader": "^4.1.1",
@@ -54,10 +54,10 @@
     "@types/cross-spawn": "^6.0.2",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.37",
+    "@types/webpack-dev-server": "^3.11.3",
     "@types/yargs": "^16.0.1",
-    "jest": "^26.6.3",
+    "eslint": "^7.23.0",
     "rimraf": "^3.0.2",
-    "ts-jest": "^26.5.4",
     "typescript": "^4.2.3"
   },
   "jest": {
