--- a/package.json
+++ b/package.json
@@ -13,10 +13,21 @@
     "build": "npm run clear && tsc -p config/tsconfig.prod.json && tsc -p config/tsconfig.esm.prod.json",
     "clear": "rimraf lib dist esm",
     "prepublishOnly": "npm run build",
-    "pub": "npm publish --registry=https://registry.npmjs.org/ && git push"
+    "pub": "npm publish --registry=https://registry.npmjs.org/ && git push",
+    "lint-staged": "lint-staged"
   },
   "bin": {
     "k-boot": "bin/index.js"
+  },
+  "lint-staged": {
+    "*.js?(x)$": [
+      "prettier --write",
+      "eslint --fix --quiet"
+    ],
+    "*.ts?(x)$": [
+      "prettier --parser=typescript --write",
+      "eslint --fix --quiet"
+    ]
   },
   "dependencies": {
     "@babel/core": "^7.13.14",
@@ -57,6 +68,8 @@
     "@types/webpack-dev-server": "^3.11.3",
     "@types/yargs": "^16.0.1",
     "eslint": "^7.23.0",
+    "husky": "^6.0.0",
+    "lint-staged": "^10.5.4",
     "rimraf": "^3.0.2",
     "typescript": "^4.2.3"
   },
