--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   ],
   "scripts": {
     "watch": "tsc -p ./tsconfig.json --watch",
-    "build": "npm run clear && tsc -p config/tsconfig.prod.json && tsc -p config/tsconfig.esm.prod.json",
+    "build": "npm run clear && tsc -p config/tsconfig.prod.json",
     "clear": "rimraf lib dist esm",
     "prepublishOnly": "npm run build",
     "pub": "npm publish --registry=https://registry.npmjs.org/ && git push",
