update: RouterConfig.template

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "files": [
     "bin/",
     "lib/",
-    "esm/"
+    "assets/"
   ],
   "scripts": {
     "watch": "tsc -p ./tsconfig.json --watch",
